@@ -3,6 +3,9 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2012-07-16 (SVN):
+    * split maputils to four directories, qbsp, light, vis and bspinfo.
+
 2012-07-14 (SVN):
     * utils (genmodel): better handling of command line switches.
 
